results/SVCOMP/specgen/log-ExSymExeLCMP-2024_03_07_02_06_57.txt
class Main {

  //@ ensures \result == (\result == false <==> x + 1 > x + 2);
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ ensures \result == (res + 1 > res + 2);
  public boolean test(long x, long y) {

    long res = x;
    if (res + 1 > res + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:9: error: cannot find symbol
  //@ ensures \result == (res + 1 > res + 2);
                          ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeLCMP.java:9: error: cannot find symbol
  //@ ensures \result == (res + 1 > res + 2);
                                    ^
  symbol:   variable res
  location: class Main
2 errors

class Main {

  //@ ensures \result == (\result == false <==> x + 1 > x + 2);
  public static boolean f(long x) {
    Main inst = new Main();
    return inst.test(x, 5);
  }

  //@ ensures \result == (x + 1 > x + 2);
  public boolean test(long x, long y) {

    long res = x;
    if (x + 1 > x + 2) {
      return false;
    } else
      System.out.println("x <=0");
    return true;
  }
}
